# ffmepg_videoplayer

./: .gitignore  CMakeLists.txt  LICENSE  VersionInfo.rc.in  build_android.sh  build_windows.bat  deploy_to_unreal.bat
src/: commons.cpp  commons.h  dll.cpp  ffmepg_context.cpp  ffmepg_context.h  format_converter.h  video_player.cpp  video_stream.cpp  video_stream.h  videoplayer_c_api.h
